--- a/metadata.yaml
+++ b/metadata.yaml
@@ -23,6 +23,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'DP'
 - !lcsh 'Azores'
+- GITenberg
 title: "Memoria historica sobre as ilhas dos Açores\r\ncomo parte componente da Monarchia\
   \ Portugueza, com ideias politicas relativas à reforma do Governo Portuguez, e sua\
   \ nova constituição"
